# serializer version: 1
# name: test_all_entities[notify.echo_test_announce-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.echo_test_announce',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Announce',
    'platform': 'alexa_devices',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'announce',
    'unique_id': 'echo_test_serial_number-announce',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[notify.echo_test_announce-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Echo Test Announce',
      'supported_features': <NotifyEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.echo_test_announce',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[notify.echo_test_speak-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.echo_test_speak',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Speak',
    'platform': 'alexa_devices',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'speak',
    'unique_id': 'echo_test_serial_number-speak',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[notify.echo_test_speak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Echo Test Speak',
      'supported_features': <NotifyEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.echo_test_speak',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
